--- a/servers/service-config-server/src/main/resources/application.yml
+++ b/servers/service-config-server/src/main/resources/application.yml
@@ -26,9 +26,9 @@ spring:
    cloud:
       config:
          server:
-            encrypt.enabled: true
+            encrypt.enabled: false
             git:
-               uri: https://github.com/bitacademy-poscodx09/msa-practices-config-repo
+               uri: https://github.com/poscodx09-project/msa-practices-config-repo
                searchPaths: service-emaillist,
                             service-storage,
                             service-gallery,
@@ -61,11 +61,11 @@ spring:
        server:
           encrypt.enabled: false
           native:
-              searchLocations: file:///Users/kickscar/DoWork/STS-Workspace-POSCODX09/msa-practices-config-repo/service-emaillist,
-                               file:///Users/kickscar/DoWork/STS-Workspace-POSCODX09/msa-practices-config-repo/service-storage,
-                               file:///Users/kickscar/DoWork/STS-Workspace-POSCODX09/msa-practices-config-repo/service-gallery,
-                               file:///Users/kickscar/DoWork/STS-Workspace-POSCODX09/msa-practices-config-repo/service-guestbook,
-                               file:///Users/kickscar/DoWork/STS-Workspace-POSCODX09/msa-practices-config-repo/service-gateway-server
+              searchLocations: file:///C:/poscoDX/msa-practices-config-repo/service-emaillist,
+                               file:///C:/poscoDX/msa-practices-config-repo/service-storage,
+                               file:///C:/poscoDX/msa-practices-config-repo/service-gallery,
+                               file:///C:/poscoDX/msa-practices-config-repo/service-guestbook,
+                               file:///C:/poscoDX/msa-practices-config-repo/service-gateway-server
 
 logging:
    pattern:
