--- a/services/service-emaillist/pom.xml
+++ b/services/service-emaillist/pom.xml
@@ -66,6 +66,12 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- spring cloud config client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
 	</dependencies>
 	
 	<dependencyManagement>
