--- a/services/service-emaillist/src/main/resources/application.yml
+++ b/services/service-emaillist/src/main/resources/application.yml
@@ -28,37 +28,7 @@ spring:
    config:
       activate:
          on-profile: development
-
-   devtools:
-      restart:
-         enabled: true
-      livereload:
-         enabled: true
-         
-   datasource:
-      driver-class-name: org.mariadb.jdbc.Driver
-      url: jdbc:mariadb://192.168.0.7:3306/webdb?characterEncoding=utf8
-      username: webdb
-      password: webdb
-      hikari:
-         minimum-idle: 10
-         maximum-pool-size: 20    
-
-eureka:
-   instance:
-      preferIpAddress: true
-   client:
-      fetchRegistry: true
-      registerWithEureka: true
-      serviceUrl:
-         defaultZone: http://localhost:8761/eureka
-
-logging:
-   pattern:
-      console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{5} - %msg%n"
-   level:
-      root: DEBUG
-
+      import: optional:configserver:http://localhost:7777
 
 ---
 # profile: production
@@ -66,36 +36,4 @@ spring:
    config:
       activate:
          on-profile: production
-
-   datasource:
-      driver-class-name: org.mariadb.jdbc.Driver
-      url: jdbc:mariadb://192.168.0.7:3306/webdb?characterEncoding=utf8
-      username: webdb
-      password: webdb
-      hikari:
-         minimum-idle: 10
-         maximum-pool-size: 20 
-
-eureka:
-   instance:
-      preferIpAddress: true
-   client:
-      fetchRegistry: true
-      registerWithEureka: true
-      serviceUrl:
-         defaultZone: http://192.168.0.7:8761/eureka
-
-logging:
-   pattern:
-      file: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{5} - %msg%n"
-   logback:
-      rollingpolicy:
-         file-name-pattern: "logs/${spring.application.name}.%d{yyyy-MM-dd}.%i.log.zip"
-         max-file-size: 10MB
-         max-history: 10
-   file:
-      name: logs/${spring.application.name}.log
-   level:
-      root: WARN
-      emaillist:
-         exception: ERROR
+      import: optional:configserver:http://192.168.0.7:7777
