--- a/servers/embedded-springboot-keycloak-server/embedded-keycloak-server/pom.xml
+++ b/servers/embedded-springboot-keycloak-server/embedded-keycloak-server/pom.xml
@@ -2,30 +2,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.github.thomasdarimont.keycloak</groupId>
         <artifactId>embedded-keycloak-server-springboot</artifactId>
         <version>999-SNAPSHOT</version>
     </parent>
 
+
     <artifactId>embedded-keycloak-server</artifactId>
+
 
     <properties>
         <java.version>21</java.version>
         <start-class>com.github.thomasdarimont.keycloak.embedded.runner.Main</start-class>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.github.thomasdarimont.keycloak</groupId>
-            <artifactId>embedded-keycloak-server-springboot-starter</artifactId>
+            <groupId>com.github.thomasdarimont.embedded-spring-boot-keycloak-server</groupId>
+            <artifactId>embedded-keycloak-server-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
-		<dependency>
-		    <groupId>org.mariadb.jdbc</groupId>
-		    <artifactId>mariadb-java-client</artifactId>
-		</dependency>        
+
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -56,6 +61,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
